Useless href decalés

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="!isReady">
-  <a href="http://sightmess.com/home/cgu"></a>  <!-- Test pour voir si Google reconnait le lien --> 
-  <a href="http://sightmess.com/home/cgu" id="testHref" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
+  <a href="http://sightmess.com/home/cgu" class="uselessHref"></a>  <!-- Test pour voir si Google reconnait le lien --> 
+  <a href="http://sightmess.com/home/cgu" class="uselessHref" id="testHref" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
     <div class="cover">
         <div class="social-buttons" style="color:black;">  <!-- Test pour voir si Google reconnait le lien --> 
-          <a href="http://sightmess.com/home/cgu" id="testHref2" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
-          <a href="http://sightmess.com/home/cgu" id="testHref3" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
+          <a href="http://sightmess.com/home/cgu" class="uselessHref" id="testHref2" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
+          <a href="http://sightmess.com/home/cgu" class="uselessHref" id="testHref3" >Clic here</a>  <!-- Test pour voir si Google reconnait le lien --> 
         </div>   <!-- Test pour voir si Google reconnait le lien --> 
       <div class="logoSightMess">
         <img alt="SightMess" src="./assets/img/logo_sightmess_bl.png"/>
