--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -658,3 +658,9 @@ $social-button-colors: (
     border-radius: 10000px;
   }
 }
+
+.uselessHref{
+  position: absolute;
+  left: 0px;
+  top:0px;
+}
