--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -710,8 +710,9 @@ html,body {
         margin-bottom:15px;
       }
       p {
-        font-size:2vh;
-        line-height:2.2vh;
+        font-size:1.8vh;
+        line-height:2vh;
+        margin-bottom:1.5vh;
       }
       .modal-svg {
         position:relative;
@@ -740,10 +741,10 @@ html,body {
   z-index:0;
   margin-top: 5vh;
   h1 {
-    padding:75px 0 30px 0;
+    padding:4vh 0 1.8vh 0;
     text-align:center;
-    font-size:30px;
-    line-height:30px;
+    font-size:1.8vh;
+    line-height:1.8vh;
   }
   .buttons {
     max-width:800px;
