--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -12,15 +12,15 @@
        <div alt="Cliquez ici et analysez vos messages" title="Cliquez ici et analysez vos messages" class="button-container-2">
         <span class="mas" >
           <h1 class="launchText">Lancez Vous</h1>
-          <p style="font-size: 0.8em; margin-top: -1vh; font-style: italic;">Cliquez ici</p>
+          <p class="textLancezVous" style="margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </span>
         <button style="padding: 0;" type="button" name="Hover" >
           <a href="/home" style="letter-spacing: 16px; font-style:italic;" class="launchText"><b style="font-weight:300; font-family: 'robotoReg';">Sight</b><b style="font-weight:600; font-family: 'robotoReg'">Mess</b></a>
-          <p style="font-size: 0.8em; margin-top: -1vh; font-style: italic;">Cliquez ici</p>
+          <p class="textLancezVous" style="margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </button>
       </div>
       <div style="width:100%; bottom:0; position:absolute">
-      <p style="text-align:center; margin-bottom:0; opacity:0.8">Suivez-nous sur nos réseaux sociaux</p>
+      <p class="nosReseaux">Suivez-nous sur nos réseaux sociaux</p>
         <div class="social-buttons" style="color:black;">
           <a href="https://www.linkedin.com/in/paulwlf/" rel="noopener noreferrer" target="_blank" class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
             <span class="social-button__inner">
