--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -105,7 +105,7 @@
           <hr class="overview">
           <p>Cliquez sur le bouton ci-dessous et sélectionnez votre dossier Facebook pour commencer l'analyse.</p>
           <p>Vous n'avez pas encore votre dossier ?</p>
-          <p><a class="clickHere" (click)="showTutorial()">Cliquez ici pour l'obtenir</a></p>
+          <p><a class="clickHereMain" (click)="showTutorial()">Cliquez ici pour l'obtenir</a></p>
           
         </div>
         
