--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -19,7 +19,7 @@
           <p class="textLancezVous" style="margin-top: -1vh; font-style: italic;">Cliquez ici</p>
         </button>
       </div>
-      <div style="width:100%; bottom:10; position:absolute">
+      <div class="reseauxSection" style="width:100%; bottom:10; position:absolute">
         <p style="text-align:center; margin-bottom:0; opacity:0.8">Suivez-nous sur nos réseaux sociaux</p>
         <div class="buttonReseaux">
           <a href="https://www.linkedin.com/company/sightmess" target="_blank"><img src="./assets/img/logo_linkedin.svg"/></a>
