--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -634,10 +634,14 @@ $social-button-colors: (
 
 @media all and (max-device-width: 480px){
   .textLancezVous{
-    font-size: 3.5vh;
+    font-size: 2.5vh;
   }
   .nosReseaux{
     font-size:1.5vh;
+  }
+
+  .reseauxSection{
+    font-size: 2vh;
   }
 }
 
