all modif patch envoyé sur fb

--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -1,7 +1,6 @@
 <div class="pannelHome" *ngIf="isHome">
   <div class="titlePanel">
     <h1>Vos panels</h1>
-    <hr class="overview">
   </div>
 
   <div class="tPannel">
@@ -41,11 +40,9 @@
     </figcaption>
     </figure>
   </div>
-  <hr style="margin-bottom:0;" class="overview">
 
-  <div style="display:flex; padding-top: 3vh;">
-    <ad-custom style="width:50%;"></ad-custom>
-    <ad-custom style="width:50%;"></ad-custom>
+  <div>
+    <ad-custom adType="tagBillBoard"></ad-custom>
   </div>
 </div>
 
