--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -283,7 +283,7 @@
         <button class="buttonSelect">Selectionner votre dossier</button>
         
         
-        <ad-custom></ad-custom>
+        <ad-custom adType="tagBillBoard"></ad-custom>
         <div class="youtubeVideo">
         <iframe width="800" height="500"
         src="https://www.youtube.com/embed/pwyis3PzMdc" style="border:solid; border-width: 10px; border-color:rgb(0, 0, 0); border-radius: 30px;">
