--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -840,6 +840,13 @@ html,body {
   font-size:1.1vw;
 }
 
+.card h3{
+  font-size:1.8vw;
+  margin:0;
+  margin-top: 1.5%;
+  margin-bottom: 3%;
+}
+
 @media all and (max-device-width: 480px){
   .card{
     width: 28vw;;
@@ -873,12 +880,7 @@ html,body {
     margin-top:4%;
 }
 
-.card h3{
-  font-size:1.8vw;
-  margin:0;
-  margin-top: 1.5%;
-  margin-bottom: 3%;
-}
+
 
 .bienvenue {
     margin-top: -1%;
@@ -1005,6 +1007,13 @@ hr.overview{
 
 .buttonSelect:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+@media all and (max-device-width: 480px){
+  .buttonSelect{
+    font-size:1.2vh;
+  }
 }
 
 //STAR RATE
@@ -1161,7 +1170,7 @@ $rating-icons-paths: (
 .indicators{
   display: flex;
   margin: auto;
-  width: 60vw;
+  width: 90vw;
   justify-content: space-around;
   color: white;
   padding: 0.7%;
