--- a/src/app/file-drop-page/loading-custom/loading-custom.component.html
+++ b/src/app/file-drop-page/loading-custom/loading-custom.component.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<ad-custom></ad-custom>
+<ad-custom adType="tagBillBoard"></ad-custom>
 
 <div class="instruction">
   <h3 style="margin-left:1%">Quelques recommendations:</h3>
