--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -503,6 +503,9 @@ h2 {
 
 .buttonMessage{
   margin-top : 1%;
+  background-color: #DCDCDC;
+  color: #1A1837;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .selectDivision{
