Correction DB routing

--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="tPannel">
-    <figure class="snip1477"  [routerLink]="['own-stats']" (click)="switchPannel('ownStats')" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
+    <figure class="snip1477"  [routerLink]="['own-stats']" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
       <img src="./assets/img/home_ownstat.svg" />
     <div class="title">
       <div>
@@ -16,7 +16,7 @@
     </figcaption>
     </figure>
 
-    <figure class="snip1477"  [routerLink]="['conv']" (click)="switchPannel('statsConv')" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
+    <figure class="snip1477"  [routerLink]="['conv']" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
       <img src="./assets/img/home_conv.svg" />
     <div class="title">
       <div>
@@ -28,7 +28,7 @@
     </figcaption>
     </figure>
 
-    <figure class="snip1477"  [routerLink]="['profil']" (click)="switchPannel('profil')" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
+    <figure class="snip1477"  [routerLink]="['profil']" style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); cursor : pointer;">
       <img src="./assets/img/home_profil.svg" />
     <div class="title">
       <div>
