--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -49,3 +49,23 @@
 <div class="mainPannel">
   <router-outlet></router-outlet>
 </div>
+
+<div class="popupToRate" *ngIf="isRateMoment">
+  <div class="close-container" (click)="closeTooltip()">
+    <div class="leftright"></div>
+    <div class="rightleft"></div>
+    <label class="close">close</label>
+  </div>
+  <h1 style="margin-left: 11%;" *ngIf="!isRated">Donnez votre avis !</h1>
+  <p *ngIf="!isRated">Que pensez vous de SightMess ?</p>
+  <div class="rating-holder">
+    <div *ngIf="!isRated" class="c-rating c-rating--big" data-rating-value="0">
+      <button (click)=rateSightMess(1)>1</button>
+      <button (click)=rateSightMess(2)>2</button>
+      <button (click)=rateSightMess(3)>3</button>
+      <button (click)=rateSightMess(4)>4</button>
+      <button (click)=rateSightMess(5)>5</button>
+    </div>
+  </div>
+  <p *ngIf="isRated" style="margin-top: 9%;font-size: 3em;">Merci !</p>
+</div>
