--- a/src/app/cgu/cgu.component.html
+++ b/src/app/cgu/cgu.component.html
@@ -88,7 +88,9 @@
   
   <h1>ARTICLE 7 : Données personnelles</h1>
   
-  <p>L’Utilisateur doit obligatoirement fournir des informations personnelles pour procéder à l’utilisation des services du site.
+  <p>L’Utilisateur doit fournir des informations personnelles pour procéder à l’utilisation des services du site.
+  
+  Néanmoins, Sightmess s'engage à ne stocker aucun message et aucun nom de contact de l'utilisateur. L'unique objectif du stockage de données est l'amélioration du service d'analyse. Ainsi, seules les données relatives aux résultats peuvent être retraitées.
   
   SightMess garantit le respect de la vie privée de l’utilisateur, conformément à la loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés.
     
